--- a/examples/replay.html
+++ b/examples/replay.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <title>A-Frame Motion Capture Components Replay</title>
   <meta name="description" content="Motion Capture Components Replay – A-Frame">
-  <script src="https://aframe.io/releases/0.9.2/aframe.min.js"></script>
+  <script src="js/aframe-v0.9.2.js"></script>
   <script src="js/build.js"></script>
   <script src="js/components/aabb-collider.js"></script>
   <script src="js/components/grab.js"></script>
@@ -58,16 +58,9 @@
         <a-entity class="cube" mixin="cube" position="-0.60 0.15 0"></a-entity>
 
         <!-- Environment -->
-        <!-- <a-entity id="sky"
-                    geometry="primitive: sphere; radius: 65;"
-                    material="shader: skyGradient; colorTop: #353449; colorBottom: #BC483E; side: back"></a-entity> -->
-        <!-- <a-entity ground></a-entity> -->
-
-        <a-plane position="0 .1 0" rotation="-90 0 0" width="4" height="4" color="#7BC8A4"></a-plane>
-
-        <!-- Background sky. -->
-        <a-sky height="2048" radius="30" src="#skyTexture" theta-length="90" width="2048"></a-sky>
-
+        <a-entity id="sky" geometry="primitive: sphere; radius: 65;"
+          material="shader: skyGradient; colorTop: #353449; colorBottom: #BC483E; side: back"></a-entity>
+        <a-entity ground></a-entity>
         <a-entity light="type: point; color: #f4f4f4; intensity: 0.2; distance: 0" position="8 10 18"></a-entity>
         <a-entity light="type: point; color: #f4f4f4; intensity: 0.6; distance: 0" position="-8 10 -18"></a-entity>
         <a-entity light="type: ambient; color: #f4f4f4; intensity: 0.4;" position="-8 10 -18"></a-entity>
